--- a/index.html
+++ b/index.html
@@ -1,111 +1,108 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Meama Community</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Noto+Sans+Georgian:wght@100..900&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-    }
-    h1, h2, h3, h4, h5, h6 {
-      font-family: 'Montserrat', sans-serif;
-    }
-    
-    /* Georgian Font Override - Noto Sans Georgian */
-    .font-georgian, 
-    .font-georgian * {
-      font-family: 'Noto Sans Georgian', 'Roboto', sans-serif !important;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Meama Community</title>
 
-    /* Force English Font (Roboto) for specific UI elements to ignore Georgian override */
-    .font-roboto-force,
-    .font-roboto-force * {
-      font-family: 'Roboto', sans-serif !important;
-    }
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Noto+Sans+Georgian:wght@100..900&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Roboto", sans-serif;
+      }
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        font-family: "Montserrat", sans-serif;
+      }
 
-    /* Custom Scrollbar */
-    ::-webkit-scrollbar {
-      width: 8px;
-    }
-    ::-webkit-scrollbar-track {
-      background: #000000; 
-    }
-    ::-webkit-scrollbar-thumb {
-      background: #444444; 
-      border-radius: 4px;
-    }
-    ::-webkit-scrollbar-thumb:hover {
-      background: #B0865E; 
-    }
-    /* Animations */
-    @keyframes fadeInUp {
-      from {
+      /* Georgian Font Override - Noto Sans Georgian */
+      .font-georgian,
+      .font-georgian * {
+        font-family: "Noto Sans Georgian", "Roboto", sans-serif !important;
+      }
+
+      /* Force English Font (Roboto) for specific UI elements to ignore Georgian override */
+      .font-roboto-force,
+      .font-roboto-force * {
+        font-family: "Roboto", sans-serif !important;
+      }
+
+      /* Custom Scrollbar */
+      ::-webkit-scrollbar {
+        width: 8px;
+      }
+      ::-webkit-scrollbar-track {
+        background: #000000;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #444444;
+        border-radius: 4px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #b0865e;
+      }
+      /* Animations */
+      @keyframes fadeInUp {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      .fade-in-up {
+        animation: fadeInUp 0.5s ease-out forwards;
         opacity: 0;
-        transform: translateY(20px);
       }
-      to {
-        opacity: 1;
-        transform: translateY(0);
+
+      /* Star Rating Gradient Fill Technique */
+      .star-rating-gradient {
+        /* Defines the gradient: Gold up to X%, Grey after X% */
+        background: linear-gradient(
+          90deg,
+          #b0865e var(--rating-percent),
+          #4b5563 var(--rating-percent)
+        );
+        /* Clips the background to the text shape */
+        -webkit-background-clip: text;
+        background-clip: text;
+        /* Makes the text itself transparent so the background shows through */
+        -webkit-text-fill-color: transparent;
+        color: transparent;
+        display: inline-block;
+        line-height: 1;
       }
-    }
-    .fade-in-up {
-      animation: fadeInUp 0.5s ease-out forwards;
-      opacity: 0;
-    }
-    
-    /* Star Rating Gradient Fill Technique */
-    .star-rating-gradient {
-      /* Defines the gradient: Gold up to X%, Grey after X% */
-      background: linear-gradient(90deg, #B0865E var(--rating-percent), #4B5563 var(--rating-percent));
-      /* Clips the background to the text shape */
-      -webkit-background-clip: text;
-      background-clip: text;
-      /* Makes the text itself transparent so the background shows through */
-      -webkit-text-fill-color: transparent;
-      color: transparent;
-      display: inline-block;
-      line-height: 1;
-    }
-  </style>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            'brand-bg': '#151515',
-            'brand-card': '#1C1C1E',
-            'brand-accent': '#B0865E',
-            'brand-text-primary': '#FCFBF4',
-            'brand-text-secondary': '#D4CFCF',
-          },
-        },
-      },
-    }
-  </script>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "vite": "https://esm.sh/vite@^7.2.7",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
-<body class="bg-brand-bg text-brand-text-primary">
-  <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+    </style>
+    <!-- Tailwind CDN config removed for production build -->
+    <script type="importmap">
+      {
+        "imports": {
+          "react/": "https://aistudiocdn.com/react@^19.2.0/",
+          "react": "https://aistudiocdn.com/react@^19.2.0",
+          "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+          "vite": "https://esm.sh/vite@^7.2.7",
+          "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+          "path": "https://esm.sh/path@^0.12.7",
+          "url": "https://esm.sh/url@^0.11.4"
+        }
+      }
+    </script>
+    <link rel="stylesheet" href="/index.css" />
+  </head>
+  <body class="bg-brand-bg text-brand-text-primary">
+    <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
