--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Favicon from Google Drive, using thumbnail API for consistency -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://drive.google.com/thumbnail?id=1tcJyKU40_NBxwD6OsrF9NIncNlNlUSzl&sz=w64"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meama Community</title>
 
